--- a/H1EmuLauncher/App.xaml
+++ b/H1EmuLauncher/App.xaml
@@ -321,6 +321,19 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style TargetType="{x:Type Separator}" x:Key="SeparatorMenuItem">
+                <Setter Property="Foreground" Value="FloralWhite"/>
+                <Setter Property="FontWeight" Value="Light"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Separator}">
+                            <Border>
+                                <Rectangle Height="1" Fill="{TemplateBinding Background}"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <Style TargetType="{x:Type ContextMenu}" x:Key="ContextMenuStyle">
                 <Setter Property="SnapsToDevicePixels" Value="True"/>
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
