--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">Eine neue Aktualisierung ist verfügbar, möchtest du die Aktualisierung jetzt ausführen?</system:String>
+    <system:String x:Key="item1">Zum spielen ist ein neues update erforderlich. Bitte warten sie.</system:String>
     <system:String x:Key="item2">Aktualisierung</system:String>
     <system:String x:Key="item3">Aktualisieren</system:String>
     <system:String x:Key="item4">Warten Sie mal</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Nachricht</system:String>
     <system:String x:Key="item210">Begrüßungsbildschirm</system:String>
     <system:String x:Key="item211">Update Verfügbar</system:String>
+    <system:String x:Key="item212">Bearbeiten</system:String>
+    <system:String x:Key="item213">SPEICHERN</system:String>
 </ResourceDictionary>
