--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">A new update is available, would you like to update now?</system:String>
+    <system:String x:Key="item1">A new update is required to play, please wait.</system:String>
     <system:String x:Key="item2">UPDATE</system:String>
     <system:String x:Key="item3">Version</system:String>
     <system:String x:Key="item4">Please wait</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Message</system:String>
     <system:String x:Key="item210">Splash Screen</system:String>
     <system:String x:Key="item211">Update Available</system:String>
+    <system:String x:Key="item212">Edit</system:String>
+    <system:String x:Key="item213">SAVE</system:String>
 </ResourceDictionary>
