--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">Existe una nueva actualización disponible; ¿quieres actualizar ahora?</system:String>
+    <system:String x:Key="item1">Se requiere una nueva actualización para jugar, espera.</system:String>
     <system:String x:Key="item2">ACTUALIZAR</system:String>
     <system:String x:Key="item3">Versión</system:String>
     <system:String x:Key="item4">Espere por favor</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Mensaje</system:String>
     <system:String x:Key="item210">Pantalla de Bienvenida</system:String>
     <system:String x:Key="item211">Actualización Disponible</system:String>
+    <system:String x:Key="item212">Editar</system:String>
+    <system:String x:Key="item213">AHORRAR</system:String>
 </ResourceDictionary>
