--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">Une mise à jour est disponible, voulez vous la télécharger?</system:String>
+    <system:String x:Key="item1">Une nouvelle mise à jour est nécessaire pour jouer, veuillez patienter.</system:String>
     <system:String x:Key="item2">Mise à jour</system:String>
     <system:String x:Key="item3">Màj Version</system:String>
     <system:String x:Key="item4">S'il vous plaît, attendez</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Message</system:String>
     <system:String x:Key="item210">Écran de Démarrage</system:String>
     <system:String x:Key="item211">Mise à Jour Disponible</system:String>
+    <system:String x:Key="item212">Modifier</system:String>
+    <system:String x:Key="item213">SAUVEGARDER</system:String>
 </ResourceDictionary>
