--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">Uma nova atualização está disponível, quer atualizar agora?</system:String>
+    <system:String x:Key="item1">Uma nova atualização é necessária para jogar, aguarde.</system:String>
     <system:String x:Key="item2">ATUALIZAR</system:String>
     <system:String x:Key="item3">Versão</system:String>
     <system:String x:Key="item4">Por favor, espere</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Mensagem</system:String>
     <system:String x:Key="item210">Tela de Abertura</system:String>
     <system:String x:Key="item211">Atualização Disponível</system:String>
+    <system:String x:Key="item212">Editar</system:String>
+    <system:String x:Key="item213">SALVAR</system:String>
 </ResourceDictionary>
