--- a/H1EmuLauncher/Language/StringResources.se-SE.xaml
+++ b/H1EmuLauncher/Language/StringResources.se-SE.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="item1">En ny uppdatering är tillgänglig, vill du uppdatera nu?</system:String>
+    <system:String x:Key="item1">En ny uppdatering krävs för att spela, vänligen vänta.</system:String>
     <system:String x:Key="item2">UPPDATERA</system:String>
     <system:String x:Key="item3">Version</system:String>
     <system:String x:Key="item4">Var god vänta</system:String>
@@ -186,4 +186,6 @@
     <system:String x:Key="item209">Meddelande</system:String>
     <system:String x:Key="item210">Startbild</system:String>
     <system:String x:Key="item211">Uppdatering Tillgänglig</system:String>
+    <system:String x:Key="item212">Redigera</system:String>
+    <system:String x:Key="item213">SPARA</system:String>
 </ResourceDictionary>
