--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -244,7 +244,8 @@
                             </Grid.ColumnDefinitions>
 
                             <!-- Add server button -->
-                            <Button Click="AddButton"
+                            <Button x:Name="saveServerButton"
+                                    Click="AddButton"
                                     Margin="20"
                                     Padding="25,7,25,7"
                                     FontFamily="Arial Black"
